# demark-patterns

./: .gitignore  CHANGELOG.md  Cargo.toml  EMAIL_CONFIGURATION.md  PR_SUMMARY.md  README.md  hello.py  portfolio.txt  pyproject.toml  requirements.txt  run_daily_scan.sh  run_full_scan.py  run_with_email.sh  send_email_results.py  send_email_results_optimized.py  test_email.py  test_small_scan.py
analysis/: AAPL_260511.csv  AAPL_260512.csv  CTRA_260511.csv  DBX_260511.csv  ELF_260511.csv  GOLD_260511.csv  INFY_260511.csv  INTC_260511.csv  IREN_260511.csv  NOK_260511.csv  NVDA_260512.csv  UAA_260512.csv  UI_260511.csv  VIV_260511.csv
demark/: cli.py  engine.py  providers.py
docs/: CONTEXT.md  initial-doc.md
openspec/changes/archive/2026-05-11-demark-indicators-yfinance/: tasks.md
openspec/changes/demark-indicators-yfinance/: design.md  proposal.md
openspec/changes/demark-recommendations/: proposal.md  tasks.md
openspec/changes/demark-signal-scoring/: tasks.md
openspec/changes/matplotlib-for-plotly/: proposal.md
openspec/changes/plot-enhancements/: design.md  proposal.md
openspec/specs/countdown-bar13-qualification/: spec.md
openspec/specs/countdown-recycle/: spec.md
openspec/specs/logic-compliance/: spec.md
openspec/specs/rust-engine/: spec.md
openspec/specs/ticker-scanner/: spec.md
openspec/specs/ticker-scoring/: spec.md
scratch/: debug_tdst.py  test_score.py
src/: lib.rs
tests/: test_cli.py  test_engine.py  test_parity.py  test_providers.py  test_sanity.py  test_scanner.py  test_scoring.py
(+48 files in other folders)
