[project]
name = "demark-patterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaleido>=0.2.1",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "plotly>=6.0.0",
    "pytest>=9.0.3",
    "scipy>=1.17.1",
    "yfinance>=1.3.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["demark"]

[project.scripts]
demark = "demark.cli:main"
