[project]
name = "demark-patterns"
version = "0.1.0"
description = "DeMark Sequential indicator engine with Rust-accelerated backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaleido>=0.2.1",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "plotly>=6.0.0",
    "pytest>=9.0.3",
    "requests>=2.31.0",
    "scipy>=1.17.1",
    "yfinance>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.7",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Python source package alongside the Rust extension
python-source = "."
module-name = "demark._demark_rust"
features = ["pyo3/extension-module"]

[tool.uv]
package = true

[project.scripts]
demark = "demark.cli:main"
